FINALLY fix our 'Object/Property' Bug.

--- a/Views/view_all_cars.cshtml
+++ b/Views/view_all_cars.cshtml
@@ -1,6 +1,8 @@
 <ul>
-  @foreach(var car in Model)
+  @foreach (var car in Model)
   {
-    <li>@car</li>
+    <li>@car.GetMakeModel()</li>
+    <li>@car.GetPrice()</li>
+    <li>@car.GetMiles()</li>
   }
 </ul>
