add a button for clearing the list of cars.

--- a/Views/car_added.cshtml
+++ b/Views/car_added.cshtml
@@ -3,5 +3,5 @@
 <p>@Model.GetMakeModel()</p>
 <p>@Model.GetPrice()</p>
 <p>@Model.GetMiles()</p>
-<p><a href="/">Add another car</a></p>
-<p><a href="/view_all_cars">View current tasks</a></p>
+<button><a href="/">Add another car</a></button>
+<button><a href="/view_all_cars">View current Cars</a></button>
