--- a/Views/view_all_cars.cshtml
+++ b/Views/view_all_cars.cshtml
@@ -6,3 +6,7 @@
     <li>@car.GetMiles()</li>
   }
 </ul>
+
+<button><a href="/">Add a new car</a></button>
+
+<button><a href="/cars_cleared">Clear All Cars</a></button>
