make minor changes to code in order to work on functionality.

--- a/Views/view_all_cars.cshtml
+++ b/Views/view_all_cars.cshtml
@@ -9,4 +9,4 @@
 
 <button><a href="/">Add a new car</a></button>
 
-<button><a href="/cars_cleared">Clear All Cars</a></button>
+<button><a href="/cars_cleared.cshtml">Clear All Cars</a></button>
